[package]
name = "update-tile"
version = "0.1.0"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "update_tile"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
bolt-lang = "0.0.1"
anchor-lang = "0.29.0"
tile = { path = "../tile", features = ["cpi"]}
serde = { version = "*", features = ["derive"] }

